--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>${rabbit-amqp-client.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
