--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -36,16 +36,25 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--rabbitmq client-->
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
 			<version>${rabbit-amqp-client.version}</version>
 		</dependency>
 
+		<!-- 支付宝SDK -->
 		<dependency>
 			<groupId>com.alipay.sdk</groupId>
 			<artifactId>alipay-sdk-java</artifactId>
 			<version>3.7.26.ALL</version>
+		</dependency>
+
+		<!-- hutool工具类 -->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-parent</artifactId>
+			<version>4.5.2</version>
 		</dependency>
 	</dependencies>
 
