--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -56,6 +56,18 @@
 			<artifactId>hutool-parent</artifactId>
 			<version>4.5.2</version>
 		</dependency>
+
+		<!--httpclient-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jersey</artifactId>
+		</dependency>
+		<!--httpclient-->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
