--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -56,6 +56,18 @@
 			<artifactId>hutool-parent</artifactId>
 			<version>4.5.2</version>
 		</dependency>
+
+		<!--日志-->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.0-alpha0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
