--- a/basics/src/main/resources/application.properties
+++ b/basics/src/main/resources/application.properties
@@ -4,9 +4,11 @@ spring.datasource.name=root
 spring.datasource.password=Jj123456!@#
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #------------日志---------------------
-logging.config=classpath:logback-spring.xml
+#logging.config=classpath:logback-spring.xml
 logging.level.javax.activation = error
 logging.level.org.mybatis.spring = warn
 logging.level.org.springframework = info
 logging.level.org.springframework.boot = info
 logging.level.root = debug
+
+server.port=9000
