--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -112,14 +112,23 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.42</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
 		<!--数据库连接启动-->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-
-	</dependencies>
+		<!--alibaba  json-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
@@ -129,6 +138,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
