--- a/basics/src/main/resources/application.properties
+++ b/basics/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #-----------------数据库---------------------------------------
-spring.datasource.url=jdbc:mysql//114.55.170.179:3306/ApolloConfigDB?characterEncoding=utf8
-spring.datasource.name=root
-spring.datasource.password=Jj123456!@#
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url= jdbc:mysql://114.55.170.179:3306/ApolloConfigDB?characterEncoding=utf8
+spring.datasource.username= root
+spring.datasource.password= Jj123456!@#
+spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 #------------日志---------------------
 #logging.config=classpath:logback-spring.xml
 logging.level.javax.activation = error
