--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -42,6 +42,10 @@
 			<artifactId>amqp-client</artifactId>
 			<version>${rabbit-amqp-client.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 
 		<!-- 支付宝SDK -->
 		<dependency>
