添加支付宝账单查询昨日的，3天之内的，一周之内的

--- a/basics/src/main/resources/application.properties
+++ b/basics/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 #------------日志---------------------
 #logging.config=classpath:logback-spring.xml
 logging.level.javax.activation = error
-logging.level.org.mybatis.spring = warn
+logging.level.org.mybatis.spring = debug
 logging.level.org.springframework = info
 logging.level.org.springframework.boot = info
 logging.level.root = debug
