fanout不指定队列名

--- a/basics/src/main/resources/application.properties
+++ b/basics/src/main/resources/application.properties
@@ -12,3 +12,5 @@ logging.level.org.springframework.boot = info
 logging.level.root = debug
 
 server.port=9000
+
+rabbitmq.queue.name = ${server.port}
