--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -152,6 +152,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.9</version>
 		</dependency>
+		<!--阿里巴巴 excel-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>easyexcel</artifactId>
+			<version>2.0.5</version>
+		</dependency>
     </dependencies>
 
 	<build>
