--- a/basics/src/main/resources/application.properties
+++ b/basics/src/main/resources/application.properties
@@ -14,3 +14,16 @@ logging.level.root = debug
 server.port=9000
 
 rabbitmq.queue.name = ${server.port}
+
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.port=6379
+spring.redis.timeout=20000
+
+
+
+
