--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -13,7 +13,13 @@ spring:
         max-active: 8
         max-idle: 8
         max-wait: 1
-
+  kafka:
+    producer:
+      bootstrap-servers: 127.0.0.1:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      group-id: foo
 
 server:
   port: 9000
@@ -31,6 +37,6 @@ logging:
     org:
       mybatis:
         spring: debug
-      springframework:
-        boot: info
+      springframework: info
+      springframework.boot: info
     root: debug
