--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -188,6 +188,7 @@
             <version>1.18.10</version>
             <scope>provided</scope>
         </dependency>
+        <!--计算经纬度-->
         <dependency>
             <groupId>org.gavaghan</groupId>
             <artifactId>geodesy</artifactId>
