--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -194,6 +194,11 @@
             <artifactId>geodesy</artifactId>
             <version>1.1.3</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-gateway</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
