--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 #-----------------数据库---------------------------------------
 spring:
   datasource:
-    url: jdbc:mysql://114.55.170.179:3306/learn?characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/learn?characterEncoding=utf8
     username: root
-    password: Jj123456!@#
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
   redis:
     database: 0
@@ -33,10 +33,10 @@ rabbitmq:
 logging:
   level:
     javax:
-      activation: error
+      activation: debug
     org:
       mybatis:
         spring: debug
-      springframework: info
-      springframework.boot: info
+      springframework: debug
+      springframework.boot: debug
     root: debug
