--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -210,6 +210,12 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.5</version>
         </dependency>
+
+        <!--mongodb-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
