--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -23,6 +23,12 @@ spring:
   cache:
     type: redis
     cache-names: redisCache
+  rabbitmq:
+    host: 116.62.48.25
+    port: 5662
+    username: colovu
+    password: pass4colovu
+    connection-timeout: 60s
 
 server:
   port: 9000
