添加当程序出现异常时，重试3次，如果失败，将通过死信队列存入到进行二次处理数据库，相当于当异常的数据进行保存，方便后期可以人工进行处理

--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -29,6 +29,16 @@ spring:
     username: colovu
     password: pass4colovu
     connection-timeout: 60s
+    listener:
+      simple:
+        acknowledge-mode: auto
+        retry:
+          enabled: true
+          max-attempts: 3
+          max-interval: 1000ms
+#        default-requeue-rejected: false
+#    publisher-confirms: true
+#    publisher-returns: true
   data:
     mongodb:
       host: 116.62.48.25
