--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -31,14 +31,14 @@ spring:
     connection-timeout: 60s
     listener:
       simple:
-        acknowledge-mode: auto
+        acknowledge-mode: manual
         retry:
           enabled: true
           max-attempts: 3
           max-interval: 1000ms
-#        default-requeue-rejected: false
-#    publisher-confirms: true
-#    publisher-returns: true
+        default-requeue-rejected: false
+    publisher-confirms: true
+    publisher-returns: true
   data:
     mongodb:
       host: 116.62.48.25
