--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -31,14 +31,14 @@ spring:
     connection-timeout: 60s
     listener:
       simple:
-        acknowledge-mode: manual
+        acknowledge-mode: manual # 手动ack auto自动ack
         retry:
-          enabled: true
-          max-attempts: 3
-          max-interval: 1000ms
-        default-requeue-rejected: false
-    publisher-confirms: true
-    publisher-returns: true
+          enabled: true # 开启重试
+          max-attempts: 3  # 最大重试次数
+          max-interval: 1000ms # 最大间隔时间
+        default-requeue-rejected: false # 被拒绝的消息是否重新入列 默认为true
+    publisher-confirms: true # 消息发布确认
+    publisher-returns: true # 消息发布返回
   data:
     mongodb:
       host: 116.62.48.25
