--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -217,6 +217,12 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId> org.springframework.boot </groupId>
+			<artifactId> spring-boot-configuration-processor </artifactId>
+			<optional> true </optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
