--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -7,12 +7,14 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   redis:
     database: 0
-    host: 127.0.0.1
+    host: 116.62.48.25
     jedis:
       pool:
         max-active: 8
         max-idle: 8
         max-wait: 1
+    port: 6378
+    password: 123456
   kafka:
     producer:
       bootstrap-servers: 127.0.0.1:9092
