--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -218,6 +218,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId> org.springframework.boot </groupId>
 			<artifactId> spring-boot-configuration-processor </artifactId>
 			<optional> true </optional>
