--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -8,12 +8,13 @@ spring:
   redis:
     database: 0
     host: 116.62.48.25
-    jedis:
-      pool:
-        max-active: 8
-        max-idle: 8
-        max-wait: 1
     port: 6378
+    lettuce:
+      pool:
+        min-idle: 0
+        max-wait: -1
+        max-idle: 8
+        max-active: 8
     password: 123456
   kafka:
     producer:
