--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -228,6 +228,13 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+    	<!--解析网页-->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.15.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId> org.springframework.boot </groupId>
 			<artifactId> spring-boot-configuration-processor </artifactId>
