--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -235,6 +235,13 @@
 			<version>1.15.3</version>
 		</dependency>
 
+		<!--用于生成图片  -->
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.19</version>
+		</dependency>
+
 		<dependency>
 			<groupId> org.springframework.boot </groupId>
 			<artifactId> spring-boot-configuration-processor </artifactId>
