--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -243,6 +243,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.28</version>
+		</dependency>
+
+		<dependency>
 			<groupId> org.springframework.boot </groupId>
 			<artifactId> spring-boot-configuration-processor </artifactId>
 			<optional> true </optional>
