--- a/basics/src/main/resources/application.yml
+++ b/basics/src/main/resources/application.yml
@@ -10,16 +10,16 @@ spring:
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
   redis:
-    database: 0
-    host: 116.62.48.25
-    port: 6378
+    database: 10
+    host: r-2ze4r1ddzycwxhkq9dpd.redis.rds.aliyuncs.com
+    port: 6379
     lettuce:
       pool:
         min-idle: 0
         max-wait: -1
         max-idle: 8
         max-active: 8
-    password: 123456
+    password: Rendui123456!
 #  kafka:
 #    producer:
 #      bootstrap-servers: 127.0.0.1:9092
