--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -253,6 +253,12 @@
 			<artifactId>weixin-java-pay</artifactId>
 			<version>4.1.0</version>
 		</dependency>
+		<!--canal-->
+		<dependency>
+			<groupId>com.alibaba.otter</groupId>
+			<artifactId>canal.client</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
