--- a/basics/pom.xml
+++ b/basics/pom.xml
@@ -129,11 +129,11 @@
 		</dependency>
 
 		<!--数据库连接启动-->
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.2</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.mybatis.spring.boot</groupId>-->
+<!--			<artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--			<version>1.3.2</version>-->
+<!--		</dependency>-->
 
 		<!--alibaba  json-->
 		<dependency>
